# pysru-mab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pysru_mab/: __init__.py  _cli.py  _codes.py  _info.py  _model.py  _parser.py  _writer.py
pysru_mab/data/: ink2.json  ink2r.json  ink2s.json
tests/: test_cli.py  test_codes.py  test_info.py  test_model.py  test_parser.py  test_roundtrip.py  test_writer.py
tests/fixtures/: custom_codes.json  sample_blanketter.sru  sample_blanketter_cp850.sru  sample_info.sru
