[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysru-mab"
version = "0.1.0"
description = "Semantic parser/writer for Skatteverket SRU files (BLANKETTER.SRU, INFO.SRU)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Martin Monperrus" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.urls]
Homepage = "https://github.com/monperrus/pysru-mab"

[project.scripts]
pysru-mab = "pysru_mab._cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "build",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pysru_mab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
